starsight-layer-5/tests/snapshots/snapshot__snapshot_polar_grid_categorical.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: "polar_grid_svg(theta, r)"
---
<svg height="400" viewBox="0 0 400 400" width="400" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="360" shape-rendering="crispEdges" width="360" x="20" y="20"/>
<path d="M290,200 C290,249.70563,249.70563,290,200,290 C150.29437,290,110,249.70563,110,200 C110,150.29437,150.29437,110,200,110 C249.70563,110,290,150.29437,290,200 z" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M327.27924,200 C327.27924,270.29437,270.29437,327.27924,200,327.27924 C129.70563,327.27924,72.72078,270.29437,72.72078,200 C72.72078,129.70563,129.70563,72.72078,200,72.72078 C270.29437,72.72078,327.27924,129.70563,327.27924,200 z" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M355.88458,200 C355.88458,286.09268,286.09268,355.88458,200,355.88458 C113.907326,355.88458,44.115433,286.09268,44.115433,200 C44.115433,113.907326,113.907326,44.115433,200,44.115433 C286.09268,44.115433,355.88458,113.907326,355.88458,200 z" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M380,200 C380,299.41125,299.41125,380,200,380 C100.58874,380,20,299.41125,20,200 C20,100.58874,100.58874,20,200,20 C299.41125,20,380,100.58874,380,200 z" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L290,44.115433" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L355.88458,110" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L380,200" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L355.88458,290" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L290,355.88458" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L200,380" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L110,355.88458" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L44.115433,290" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L20,200" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L44.115433,110" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L110,44.115433" fill="none" stroke="#dddddd" stroke-width="1"/>
<path d="M200,200 L200,20" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
</svg>
