starsight-layer-5/tests/snapshots/snapshot__snapshot_polar_rect.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: svg
---
<svg height="500" viewBox="0 0 500 500" width="500" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="452" shape-rendering="crispEdges" width="484" x="8" y="40"/>
<text fill="#111111" font-family="sans-serif" font-size="16" x="115.59999" y="32">
Polar rect — annular tiles
</text>
<path d="M250,266 L250,190.66666 C291.60547,190.66666,325.33334,224.39455,325.33334,266 z" fill="#440256" stroke="#000000" stroke-width="0"/>
<path d="M250,266 L325.33334,266 C325.33334,307.60547,291.60547,341.33334,250,341.33334 z" fill="#482374" stroke="#000000" stroke-width="0"/>
<path d="M250,266 L250,341.33334 C208.39455,341.33334,174.66666,307.60547,174.66666,266 z" fill="#423f85" stroke="#000000" stroke-width="0"/>
<path d="M250,266 L174.66666,266 C174.66666,224.39455,208.39455,190.66666,250,190.66666 z" fill="#37598c" stroke="#000000" stroke-width="0"/>
<path d="M250,115.33333 C333.2109,115.33333,400.6667,182.7891,400.6667,266 L325.33334,266 C325.33334,224.39455,291.60547,190.66666,250,190.66666 z" fill="#2d708e" stroke="#000000" stroke-width="0"/>
<path d="M400.6667,266 C400.6667,349.2109,333.2109,416.6667,250,416.6667 L250,341.33334 C291.60547,341.33334,325.33334,307.60547,325.33334,266 z" fill="#24858e" stroke="#000000" stroke-width="0"/>
<path d="M250,416.6667 C166.7891,416.6667,99.33333,349.2109,99.33333,266 L174.66666,266 C174.66666,307.60547,208.39455,341.33334,250,341.33334 z" fill="#1e9b89" stroke="#000000" stroke-width="0"/>
<path d="M99.33333,266 C99.33333,182.7891,166.7891,115.33333,250,115.33333 L250,190.66666 C208.39455,190.66666,174.66666,224.39455,174.66666,266 z" fill="#2bb07e" stroke="#000000" stroke-width="0"/>
<path d="M250,40 C374.81635,40,476,141.18364,476,266 L400.6667,266 C400.6667,182.7891,333.2109,115.33333,250,115.33333 z" fill="#51c469" stroke="#000000" stroke-width="0"/>
<path d="M476,266 C476,390.81635,374.81635,492,250,492 L250,416.6667 C333.2109,416.6667,400.6667,349.2109,400.6667,266 z" fill="#85d449" stroke="#000000" stroke-width="0"/>
<path d="M250,492 C125.18364,492,24,390.81635,24,266 L99.33333,266 C99.33333,349.2109,166.7891,416.6667,250,416.6667 z" fill="#c1df23" stroke="#000000" stroke-width="0"/>
<path d="M24,266 C24,141.18364,125.18364,40,250,40 L250,115.33333 C166.7891,115.33333,99.33333,182.7891,99.33333,266 z" fill="#fde725" stroke="#000000" stroke-width="0"/>
</svg>
