starsight-layer-5/tests/snapshots/snapshot__snapshot_polars_grouped_scatter.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: svg
---
<svg height="600" viewBox="0 0 800 600" width="800" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="507" shape-rendering="crispEdges" width="724.60004" x="54.6" y="48"/>
<text fill="#111111" font-family="sans-serif" font-size="16" x="263.3" y="32">
color = 'group' → 3 PointMarks
</text>
<text fill="#333333" font-family="sans-serif" font-size="12" x="413.3" y="590">
x
</text>
<text fill="#333333" font-family="sans-serif" font-size="12" transform="rotate(-90 21.999998, 305.1)" x="21.999998" y="305.1">
y
</text>
<path d="M87.53636,555 L87.53636,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M219.28183,555 L219.28183,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M351.02728,555 L351.02728,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M482.77274,555 L482.77274,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M614.5182,555 L614.5182,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M746.2637,555 L746.2637,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,531.9545 L779.2,531.9545" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,378.31818 L779.2,378.31818" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,224.68182 L779.2,224.68182" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,71.045456 L779.2,71.045456" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M92.53636,531.9545 C92.53636,534.71594,90.29778,536.9545,87.53636,536.9545 C84.77494,536.9545,82.53636,534.71594,82.53636,531.9545 C82.53636,529.1931,84.77494,526.9545,87.53636,526.9545 C90.29778,526.9545,92.53636,529.1931,92.53636,531.9545 z M356.02728,224.68182 C356.02728,227.44325,353.7887,229.68182,351.02728,229.68182 C348.26587,229.68182,346.02728,227.44325,346.02728,224.68182 C346.02728,221.9204,348.26587,219.68182,351.02728,219.68182 C353.7887,219.68182,356.02728,221.9204,356.02728,224.68182 z M619.5182,378.31818 C619.5182,381.0796,617.2796,383.31818,614.5182,383.31818 C611.7568,383.31818,609.5182,381.0796,609.5182,378.31818 C609.5182,375.55676,611.7568,373.31818,614.5182,373.31818 C617.2796,373.31818,619.5182,375.55676,619.5182,378.31818 z" fill="#3377bb" stroke="#3377bb" stroke-width="0"/>
<path d="M224.28183,224.68182 C224.28183,227.44325,222.04326,229.68182,219.28183,229.68182 C216.5204,229.68182,214.28183,227.44325,214.28183,224.68182 C214.28183,221.9204,216.5204,219.68182,219.28183,219.68182 C222.04326,219.68182,224.28183,221.9204,224.28183,224.68182 z M487.77274,531.9545 C487.77274,534.71594,485.53415,536.9545,482.77274,536.9545 C480.01132,536.9545,477.77274,534.71594,477.77274,531.9545 C477.77274,529.1931,480.01132,526.9545,482.77274,526.9545 C485.53415,526.9545,487.77274,529.1931,487.77274,531.9545 z M751.2637,71.045456 C751.2637,73.80688,749.0251,76.045456,746.2637,76.045456 C743.50226,76.045456,741.2637,73.80688,741.2637,71.045456 C741.2637,68.284035,743.50226,66.045456,746.2637,66.045456 C749.0251,66.045456,751.2637,68.284035,751.2637,71.045456 z" fill="#ee7733" stroke="#ee7733" stroke-width="0"/>
<path d="M145.23454,316.86365 C145.23454,319.62506,142.99597,321.86365,140.23454,321.86365 C137.47311,321.86365,135.23454,319.62506,135.23454,316.86365 C135.23454,314.10223,137.47311,311.86365,140.23454,311.86365 C142.99597,311.86365,145.23454,314.10223,145.23454,316.86365 z M408.72546,101.77273 C408.72546,104.53415,406.48688,106.77273,403.72546,106.77273 C400.96405,106.77273,398.72546,104.53415,398.72546,101.77273 C398.72546,99.01131,400.96405,96.77273,403.72546,96.77273 C406.48688,96.77273,408.72546,99.01131,408.72546,101.77273 z M672.2164,255.40909 C672.2164,258.1705,669.9778,260.4091,667.2164,260.4091 C664.45496,260.4091,662.2164,258.1705,662.2164,255.40909 C662.2164,252.64766,664.45496,250.40909,667.2164,250.40909 C669.9778,250.40909,672.2164,252.64766,672.2164,255.40909 z" fill="#33aa66" stroke="#33aa66" stroke-width="0"/>
<path d="M87.53636,555 L87.53636,560" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="83.93636" y="572">
0
</text>
<path d="M219.28183,555 L219.28183,560" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="208.48183" y="572">
0.5
</text>
<path d="M351.02728,555 L351.02728,560" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="347.42728" y="572">
1
</text>
<path d="M482.77274,555 L482.77274,560" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="471.97275" y="572">
1.5
</text>
<path d="M614.5182,555 L614.5182,560" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="610.9182" y="572">
2
</text>
<path d="M746.2637,555 L746.2637,560" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="735.4637" y="572">
2.5
</text>
<path d="M54.6,531.9545 L49.6,531.9545" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="38" y="536.7545">
0
</text>
<path d="M54.6,378.31818 L49.6,378.31818" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="383.11816">
0.5
</text>
<path d="M54.6,224.68182 L49.6,224.68182" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="38" y="229.48183">
1
</text>
<path d="M54.6,71.045456 L49.6,71.045456" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="75.84546">
1.5
</text>
<path d="M54.6,555 L779.2,555" fill="none" shape-rendering="crispEdges" stroke="#000000" stroke-width="1"/>
<path d="M54.6,48 L54.6,555" fill="none" shape-rendering="crispEdges" stroke="#000000" stroke-width="1"/>
<rect fill="#ffffff" height="76" shape-rendering="crispEdges" width="37" x="70.6" y="64"/>
<path d="M70.6,64 L107.6,64 L107.6,140 L70.6,140 z" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<path d="M89.4,78 C89.4,80.65097,87.25097,82.8,84.6,82.8 C81.94903,82.8,79.799995,80.65097,79.799995,78 C79.799995,75.34903,81.94903,73.2,84.6,73.2 C87.25097,73.2,89.4,75.34903,89.4,78" fill="#3377bb" stroke="#000000" stroke-width="0"/>
<text fill="#333333" font-family="sans-serif" font-size="12" x="96.6" y="82">
A
</text>
<path d="M89.4,98 C89.4,100.65097,87.25097,102.8,84.6,102.8 C81.94903,102.8,79.799995,100.65097,79.799995,98 C79.799995,95.34903,81.94903,93.2,84.6,93.2 C87.25097,93.2,89.4,95.34903,89.4,98" fill="#ee7733" stroke="#000000" stroke-width="0"/>
<text fill="#333333" font-family="sans-serif" font-size="12" x="96.6" y="102">
B
</text>
<path d="M89.4,118 C89.4,120.65097,87.25097,122.8,84.6,122.8 C81.94903,122.8,79.799995,120.65097,79.799995,118 C79.799995,115.34903,81.94903,113.2,84.6,113.2 C87.25097,113.2,89.4,115.34903,89.4,118" fill="#33aa66" stroke="#000000" stroke-width="0"/>
<text fill="#333333" font-family="sans-serif" font-size="12" x="96.6" y="122">
C
</text>
</svg>
